--- a/src/app.css
+++ b/src/app.css
@@ -11,9 +11,14 @@ justify-content: center;
     padding: 1rem;
     border: 1px solid black;
     border-radius: 0.5rem;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
 }
 
 .colorizer button {
     cursor: pointer;
     
 }
+
